--- a/shops/templates/shops/shop_order_list.html
+++ b/shops/templates/shops/shop_order_list.html
@@ -10,6 +10,7 @@
 {% endblock breadcrumbs_title %}
 
 {% block breadcrumb_element %}
+<li><a href="{% url 'profile-settings' %}">Личный кабинет</a></li>
 <li>Заказы магазина</li>
 {% endblock %}
 
