--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -151,7 +151,7 @@
             {% endif %}
             <section class="from-the-blog-content {% if not blog_post.featured_image %}no-img{% endif %}">
               <a href="{{ blog_post.get_absolute_url }}"><h5>{{ blog_post.title|capfirst }}</h5></a>
-              <i>{{ blog_post.user.profile.get_full_name }}, {{ blog_post.publish_date|date:"d E Y" }}</i>
+              <i><a href="{{ blog_post.user.profile.get_absolute_url }}">{{ blog_post.user.profile.get_full_name }}</a>, {{ blog_post.publish_date|date:"d E Y" }}</i>
               <div>
                 {% if blog_post.preview_content %}
       						{{ blog_post.preview_content|safe|truncatewords_html:55 }}
