--- a/shops/templates/product/product.html
+++ b/shops/templates/product/product.html
@@ -251,6 +251,7 @@
 {% endblock %}
 
 {% block extra_content %}
+{% if related_products %}
 <div class="flat-background">
 	<div class="flat-row">
 		<div class="container">
@@ -267,6 +268,7 @@
 		</div>
 	</div>
 </div>
+{% endif %}
 {% endblock %}
 
 
