--- a/shops/templates/product/product_user_list.html
+++ b/shops/templates/product/product_user_list.html
@@ -68,9 +68,16 @@
 								<p>{{ product.description|truncatewords:20 }}</p>
 								<p><span class="big-green">{{ product.price|rub_currency }} </span></p>
 								<a href="{% url 'product-update' product.pk %}" class="button outline"><i class="fa fa-pencil" aria-hidden="true"></i> Изменить</a>
-								<a href="{% url 'product-delete' product.pk %}" class="button outline"><i class="fa fa-trash-o" aria-hidden="true"></i> Удалить</a>
+								<a href="#delete-object-{{ product.pk }}" class="popup-with-zoom-anim button outline"><i class="fa fa-trash-o" aria-hidden="true"></i> Удалить</a>
 							</section>
 						</div>
+				    <div id="delete-object-{{ product.pk }}" class="zoom-anim-dialog mfp-hide modal-dialog">
+				        <h2 class="margin-bottom-10">Вы точно хотите удалить &laquo;{{ product.title }}&raquo;?</h2>
+				        <form action="{% url 'product-delete' product.pk %}" method="POST">
+				            {% csrf_token %}
+				        <button class="button color pull" type="submit"><i class="fa fa-trash-o" aria-hidden="true"></i> Удалить</button>
+				        </form>
+				    </div>
 			    {% endfor %}
 			</div>
 			{% else %}
