--- a/shops/templates/shops/shop_detail.html
+++ b/shops/templates/shops/shop_detail.html
@@ -115,6 +115,7 @@
 {% endblock %}
 
 {% block extra_content %}
+{% if related_products %}
 <div class="flat-background">
 	<div class="flat-row">
 		<div class="container">
@@ -128,6 +129,7 @@
 		</div>
 	</div>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block extra_js %}
