--- a/theme/templates/includes/additional_blogposts.html
+++ b/theme/templates/includes/additional_blogposts.html
@@ -1,42 +1,35 @@
 {% load mezzanine_tags theme_tags %}
 {% if products %}
-  <div class="products">
-    {% for product in products %}
-    <div class="four columns half-columns">
-      <figure class="product">
-        {% if product.condition != 1 %}
-        <div class="badge type-{{ product.condition }}">
-          {{ product.get_condition_display }}
-        </div>
-        {% endif %}
-        {% with product.images.all as images %}
-        <div class="mediaholder {% if not images or images.count == 1 %}no-anim{%endif%}">
-        <a href="{{ product.get_absolute_url }}">
-          {% if images %}
-            <img src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}" alt="{{ product.title|capfirst }}" />
-              {% if product.images.count != 1 %}
-              <div class="cover">
-                  <img src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}" alt="{{ product.title|capfirst }}" />
-              </div>
-              {% endif %}
-          {% else %}
-            <img src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}" alt="{{ product.title|capfirst }}" />
-          {% endif %}
-        </a>
-        <a href="#" product-id="{{ product.id }}" class="product-button">
-          <i class="fa fa-shopping-cart"></i></i>В корзину
-        </a>
-        </div>
-        {% endwith %}
-        <a href="#">
-          <section>
-            <a href="{{ product.get_absolute_url }}"><h5>{{ product.title|capfirst|truncatechars:34 }}</h5></a>
-            <a href="{{ product.shop.get_absolute_url }}" class="shopname">{{ product.shop.shopname }}</a>
-            <span class="product-price">{{ product.price|rub_currency }} </span>
-          </section>
-        </a>
-      </figure>
-    </div>
+<div id="masonry-wrapper">
+    {% for blogpost in products %}
+      <div class="object-list columns masonry-item margin-top-40">
+        <figure class="object-image">
+          <a href="{{ blogpost.get_absolute_url }}">
+            {% if blogpost.featured_image %}
+              <img src="{{ MEDIA_URL }}{% thumbnail blogpost.featured_image 300 200 %}" alt="{{ blogpost.title|capfirst }}">
+            {% else %}
+            <div class="post-quote">
+              <blockquote>
+                <span><i class="fa fa-camera fa-5x" aria-hidden="true"></i></span>
+              </blockquote>
+            </div>
+            {% endif %}
+          </a>
+          <div class="hover-icon"></div>
+        </figure>
+        <section class="object-content">
+          <a href="{{ blogpost.get_absolute_url }}"><h5> {{ blogpost.title|capfirst }} </h5></a>
+          <i>Добавлено: {{ blogpost.publish_date|date:"d.m.Y"  }}</i>
+          <p>
+            {% if blogpost.preview_content %}
+              {{ blogpost.preview_content|safe|truncatewords_html:55 }}
+            {% else %}
+              {{ blogpost.description_from_content|safe }}
+            {% endif %}
+          </p>
+          <a href="{{ blogpost.get_absolute_url }}" class="button gray">Подробнее</a>
+        </section>
+      </div>
     {% endfor %}
-  </div>
+</div>
 {% endif %}
